# dualmc

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  atom_example.cpp  atom_example_visual.cpp
include/dmc/: dualmc.hpp
